Bundled fonts are not recognized if they are also system-wide installed.
Categories
(Core :: Layout: Text and Fonts, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox80 | --- | wontfix |
| firefox81 | --- | wontfix |
| firefox82 | --- | fixed |
People
(Reporter: diegocr, Assigned: jfkthame)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
as we found out in https://bugzilla.mozilla.org/show_bug.cgi?id=1653987#c13
| Reporter | ||
Updated•5 years ago
|
Comment 1•5 years ago
|
||
Set release status flags based on info from the regressing bug 1653987
| Assignee | ||
Comment 2•5 years ago
|
||
I've pushed a tryserver job at https://treeherder.mozilla.org/#/jobs?repo=try&revision=8a57d43ede699a0df146814d869da32754b146ac with a patch that I think should resolve this (but have not yet been on my Windows machine to test it). If you have a chance to try this build and confirm if it fixes the problem, that'd be great - thanks.
| Assignee | ||
Updated•5 years ago
|
| Reporter | ||
Comment 3•5 years ago
|
||
I am not familiar with what you linked there, so perhaps Simon can give a hand or otherwise we can wait for you to get to a Windows machine :)
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Comment 4•5 years ago
|
||
OK, I finally got around to testing this, by installing Twemoji Mozilla font locally on Windows, and confirmed that when font-visibility.level is set to 1, the Twemoji Mozilla font is no longer available (even though there's a copy bundled with the Firefox application), because the (suppressed) system-installed font "hides" it.
With the above patch, the issue no longer occurs: the bundled Twemoji Mozilla font takes precedence and remains available regardless of the font-visibility setting.
| Assignee | ||
Comment 5•5 years ago
|
||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 7•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
I'm having issues with my OS's font not being seen by Firefox when privacy.resistFingerprinting is set to true. Firefox falls back to DejaVu Sans which I think might be based on fontconfig defaults. This makes Firefox's chrome look out of place among my applications.
OS: Xubuntu 18.04 (GTK)
Firefox: 87.0
Setting font.system.whitelist to Cantarell (OS's UI font) solves this for me, but there has been a suggestion that placing the font in the Firefox fonts folder should make it accessible without whitelisting:
/usr/lib/firefox/fonts/
├── Cantarell-BoldOblique.otf
├── Cantarell-Bold.otf
├── Cantarell-Oblique.otf
├── Cantarell-Regular.otf
└── TwemojiMozilla.ttf
This however didn't result in the font being used for any chrome. Should it?
Comment 9•4 years ago
|
||
I can confirm the report by thehim still stands for latest 91.2 ESR.
Fonts manually put into firefox/fonts/ are ignored when privacy.resistFingerprinting=true
Updated•3 years ago
|
Description
•