Bug 1661532 - Ensure bundled fonts that duplicate installed fonts will take precedence and remain visible even if visibility/RFP would block the installed version. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D89133